# agno_indaba_workshop

./: .env.example  .gitignore  01_agno_basics.ipynb  02_agno_advanced.ipynb  README.md  pyproject.toml
