[project]
name = "agno-workshop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.19",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "lancedb>=0.33.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "sqlalchemy>=2.0.51",
    "tantivy>=0.26.0",
    "ipywidgets==8.1.8"
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
